Removed shadows in Pages page Renamed articles.js to page.js

--- a/page.html
+++ b/page.html
@@ -12,14 +12,14 @@
 <body>
     <main>
         <section class="header">
-            <a class="logo">Data Science Club</a>
+            <a class="logo" href="index.html">Data Science Club</a>
         </section>
         <article id="article">
-            <h2 id="page-title">Title</h2>
-            <p id="page-content">Content</p>
+            <h2 id="page-title"></h2>
+            <p id="page-content"></p>
         </article>
     </main>
 </body>
-<script src="scripts/article.js"></script>
+<script src="scripts/page.js"></script>
 
 </html>
