--- a/page.html
+++ b/page.html
@@ -6,6 +6,8 @@
     <link rel="manifest" href="app.webmanifest">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/page.css">
+    <script src="https://unpkg.com/browse/three@0.77.0/three.min.js"></script>
+    <script src="scripts/text.js"></script>
     <title>Page</title>
 </head>
 
