--- a/page.html
+++ b/page.html
@@ -14,7 +14,16 @@
         <section class="header">
             <a class="logo" href="index.html">Data Science Club</a>
         </section>
+        <section class="page-navigation">
+            <a id="btn-prev" >
+                <h3>❮ Previous</h3>
+            </a>
+            <a id="btn-next">
+                <h3>Next ❯</h3>
+            </a>     
+        </section>
         <article id="article">
+            
             <h2 id="page-title"></h2>
             <p id="page-content"></p>
         </article>
