--- a/page.html
+++ b/page.html
@@ -25,8 +25,8 @@
             </a>     
         </section>
         <article id="article">
-            
             <h2 id="page-title"></h2>
+            <p id="time"></p>
             <p id="page-content"></p>
         </article>
     </main>
